# neuropose

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  PYPI_README.md  README.md  RESEARCH.md  TECHNICAL.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
benchmarks/: README.md
benchmarks/videos/: README.md
docs/: architecture.md  deployment.md  development.md  getting-started.md  index.md
docs/api/: benchmark.md  config.md  estimator.md  ingest.md  interfacer.md  io.md  migrations.md  monitor.md  pipeline.md  reset.md  segment.md  visualize.md
examples/analysis/: minimal.yaml  paper_c_headline.yaml  per_joint_debug.yaml
scripts/: download_model.py  sync_benchmarks.sh
src/neuropose/: __init__.py  _model.py  benchmark.py  cli.py  config.py  estimator.py  ingest.py  interfacer.py  io.py  migrations.py  monitor.py  reset.py  visualize.py
src/neuropose/analyzer/: __init__.py  dtw.py  features.py  pipeline.py  segment.py
tests/: conftest.py
tests/integration/: test_analyze_examples.py  test_estimator_smoke.py  test_joint_names_drift.py
tests/unit/: test_analyzer_dtw.py  test_analyzer_features.py  test_analyzer_pipeline.py  test_analyzer_segment.py  test_benchmark.py  test_cli.py  test_config.py  test_estimator.py  test_ingest.py  test_interfacer.py  test_io.py  test_migrations.py  test_monitor.py  test_reset.py  test_visualize.py
